--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <service
-            android:name=".MusicPlayerService"
+            android:name="com.udacity.professorpanic.spotifystreamer.MusicPlayerService"
             android:enabled="true"
             android:exported="false" >
         </service>
