--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('libs/picasso-2.5.2.jar')
     compile(name: 'spotify-web-api-android-0.1.1', ext: 'aar')
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
