--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,15 @@
         </activity>
 
         <service
-            android:name="com.udacity.professorpanic.spotifystreamer.MusicPlayerService"
+            android:name=".MusicPlayerService"
             android:enabled="true"
             android:exported="false" >
         </service>
 
-
-
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
